feat: add invoice form with tailwindcss

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "version": "2.20.11",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "gatsby": "^3.0.1",
     "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-feed": "^3.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^1.1.0",
     "gatsby-plugin-lodash": "^4.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
@@ -40,23 +43,26 @@
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.6",
     "cli-glob": "^0.1.0",
-    "eslint": "^7.21.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "gatsby-plugin-postcss": "^4.7.1",
     "gh-pages": "^3.1.0",
-    "prettier": "^2.2.1",
+    "postcss": "^8.3.5",
     "remark-cli": "^9.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
     "stylelint": "^13.11.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.2.0",
+    "tailwindcss": "^2.2.2",
     "write-good": "^1.0.8"
   },
   "keywords": [
